unpackaged/main/default/objects/WorkOrder_Creation_Event__e/WorkOrder_Creation_Event__e.object-meta.xml
<CustomObject>
    <label>WorkOrder Creation Event</label>
    <pluralLabel>WorkOrder Creation Events</pluralLabel>
</CustomObject>