unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/BL_Address__c.field-meta.xml
<CustomField>
    <fullName>BL_Address__c</fullName>
    <label>BL Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>