unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/BL_City__c.field-meta.xml
<CustomField>
    <fullName>BL_City__c</fullName>
    <label>BL City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>