unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/BL_State__c.field-meta.xml
<CustomField>
    <fullName>BL_State__c</fullName>
    <label>BL State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>