unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/BL_Street__c.field-meta.xml
<CustomField>
    <fullName>BL_Street__c</fullName>
    <label>BL Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>