unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/BL_Zip__c.field-meta.xml
<CustomField>
    <fullName>BL_Zip__c</fullName>
    <label>BL Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>