unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/Contact_MembershipType__c.field-meta.xml
<CustomField>
    <fullName>Contact_MembershipType__c</fullName>
    <label>Contact MembershipType</label>
    <length>20</length>
    <type>Text</type>
</CustomField>