unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/Contact_OriginalMemberId__c.field-meta.xml
<CustomField>
    <fullName>Contact_OriginalMemberId__c</fullName>
    <label>Contact OriginalMemberId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>