unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/D3_CallKey__c.field-meta.xml
<CustomField>
    <fullName>D3_CallKey__c</fullName>
    <label>D3 Call Key</label>
    <length>21</length>
    <type>Text</type>
</CustomField>