unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/EventTime__c.field-meta.xml
<CustomField>
    <fullName>EventTime__c</fullName>
    <label>EventTime</label>
    <type>DateTime</type>
</CustomField>