unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/Facility_Name__c.field-meta.xml
<CustomField>
    <fullName>Facility_Name__c</fullName>
    <label>Facility Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>