unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/Pacesetter_Code__c.field-meta.xml
<CustomField>
    <fullName>Pacesetter_Code__c</fullName>
    <label>Pacesetter Code</label>
    <length>4</length>
    <type>Text</type>
</CustomField>