unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/Pacesetter_Desc__c.field-meta.xml
<CustomField>
    <fullName>Pacesetter_Desc__c</fullName>
    <label>Pacesetter Desc</label>
    <length>50</length>
    <type>Text</type>
</CustomField>