unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/Problem_Code__c.field-meta.xml
<CustomField>
    <fullName>Problem_Code__c</fullName>
    <label>Problem Code</label>
    <length>5</length>
    <type>Text</type>
</CustomField>