unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/Problem_Desc__c.field-meta.xml
<CustomField>
    <fullName>Problem_Desc__c</fullName>
    <label>Problem Desc</label>
    <length>50</length>
    <type>Text</type>
</CustomField>