unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/RAP_CallId__c.field-meta.xml
<CustomField>
    <fullName>RAP_CallId__c</fullName>
    <label>RAP CallId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>