unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/RAP_Code__c.field-meta.xml
<CustomField>
    <fullName>RAP_Code__c</fullName>
    <label>RAP Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>