unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/RAP_Goodwill__c.field-meta.xml
<CustomField>
    <fullName>RAP_Goodwill__c</fullName>
    <label>RAP Goodwill</label>
    <length>6</length>
    <type>Text</type>
</CustomField>