unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/RAP_MaxMileage__c.field-meta.xml
<CustomField>
    <fullName>RAP_MaxMileage__c</fullName>
    <label>RAP MaxMileage</label>
    <length>20</length>
    <type>Text</type>
</CustomField>