unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/RAP_Name__c.field-meta.xml
<CustomField>
    <fullName>RAP_Name__c</fullName>
    <label>RAP Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>