unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/RAP_Phone__c.field-meta.xml
<CustomField>
    <fullName>RAP_Phone__c</fullName>
    <label>RAP Phone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>