unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/RAP_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>RAP_Sponsor__c</fullName>
    <label>RAP Sponsor</label>
    <length>8</length>
    <type>Text</type>
</CustomField>