unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/TD_Address__c.field-meta.xml
<CustomField>
    <fullName>TD_Address__c</fullName>
    <label>TD Address</label>
    <length>100</length>
    <type>Text</type>
</CustomField>