unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/TD_City__c.field-meta.xml
<CustomField>
    <fullName>TD_City__c</fullName>
    <label>TD City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>