unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/TD_Latitude__c.field-meta.xml
<CustomField>
    <fullName>TD_Latitude__c</fullName>
    <label>TD Latitude</label>
    <precision>18</precision>
    <scale>15</scale>
    <type>Number</type>
</CustomField>