unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/TD_State__c.field-meta.xml
<CustomField>
    <fullName>TD_State__c</fullName>
    <label>TD State</label>
    <length>2</length>
    <type>Text</type>
</CustomField>