unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/TD_Street__c.field-meta.xml
<CustomField>
    <fullName>TD_Street__c</fullName>
    <label>TD Street</label>
    <length>100</length>
    <type>Text</type>
</CustomField>