unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/TD_Zip__c.field-meta.xml
<CustomField>
    <fullName>TD_Zip__c</fullName>
    <label>TD Zip</label>
    <length>5</length>
    <type>Text</type>
</CustomField>