unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/Timezone_Id__c.field-meta.xml
<CustomField>
    <fullName>Timezone_Id__c</fullName>
    <label>Timezone Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>