unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/Timezone_Offset__c.field-meta.xml
<CustomField>
    <fullName>Timezone_Offset__c</fullName>
    <label>Timezone Offset</label>
    <length>9</length>
    <type>Text</type>
</CustomField>