unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/Vehicle_Make__c.field-meta.xml
<CustomField>
    <fullName>Vehicle_Make__c</fullName>
    <label>Vehicle Make</label>
    <length>20</length>
    <type>Text</type>
</CustomField>