unpackaged/main/default/objects/WorkOrder_Creation_Event__e/fields/WorkOrder_CallType__c.field-meta.xml
<CustomField>
    <fullName>WorkOrder_CallType__c</fullName>
    <label>WorkOrder Call Type</label>
    <length>20</length>
    <type>Text</type>
</CustomField>